# SDL3Swift

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.0bsd  LICENSE.zlib  Package.swift
.github/workflows/: cmake.yml  pylint.yml  spm.yml
Frameworks/SDL3.xcframework/: Info.plist
Frameworks/SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist  SDL3
Frameworks/SDL3.xcframework/ios-arm64/SDL3.framework/Headers/: shim.h
Frameworks/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
Frameworks/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
Frameworks/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/Resources/: Info.plist
Frameworks/SDL3.xcframework/macos-arm64_x86_64/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
Frameworks/SDL3.xcframework/tvos-arm64/SDL3.framework/: Info.plist  SDL3
Frameworks/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
Frameworks/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/Modules/: module.modulemap
Frameworks/SDL3.xcframework/tvos-arm64_x86_64-simulator/SDL3.framework/_CodeSignature/: CodeResources
Scripts/: fetch_xcframework.py  generate-sdl3-shim.py  generate-xcframework-modulemaps.py  generate_sdl3_modulemaps.py  generate_sdl3_shim.py
Sources/CSDL3/: module.modulemap  shim.h
Sources/Examples/GPUClear/: CMakeLists.txt  main.swift
Sources/Examples/Minimal/: CMakeLists.txt  main.swift
Sources/SDL3/: SDL3.swift
Sources/SDLSwift/: CMakeLists.txt  SDL3.swift  SDL_Version.swift
Sources/SDLSwift/Events/: SDL_EventType.swift
Sources/SDLTests/: TestAvailability.swift  TestFlags.swift  TestVersion.swift
